chapter 5 written, chap.6 halfway

--- a/LaTeX Files/references.bib
+++ b/LaTeX Files/references.bib
@@ -7,47 +7,18 @@
   pages   = {026113}
 }
 
-@book{Lapchick2020,
-  author         = {Lapchick, Richard E.},
-  title          = {The 2020 Racial and Gender Report Card},
-  publisher      = {TIDES},
-  year           = {2020}
+@article{Viklund2009,
+ ISSN = {10581634},
+ URL = {http://www.jstor.org/stable/42975921},
+ author = {C. Keith Harrison},
+ journal = {Counterpoints},
+ pages = {103--121},
+ publisher = {Peter Lang AG},
+ title = {Chapter Seven: Brains, Brawn, and Pigskin Balls: Racism and Athletic Manifestation in Society},
+ volume = {107},
+ year = {2000}
 }
 
-@book{Lapchick2018,
-  author         = {Lapchick, Richard E.},
-  title          = { The 2018 Associated Press Sports Editors Racial and Gender Report Card},
-  publisher      = {TIDES},
-  year           = {2018}
-}
-
-@phdthesis{Viklund2009,
-  author      = {Viklund, Pat},
-  title       = {Brains versus Brawn: An Analysis of Stereotyping and Racial Bias in National Football League Broadcasts},
-  school      = {Boston College},
-  year        = {2009}
-}
-
-@misc{NCAA,
-  author       = {NCAA},
-  title        = {Division I Schools},
-  howpublished = {https://www.ncaa.org/about/division-i-schools},
-  year         = {2019}
-}
-
-@misc{KellyRinger,
-  author       = {Kelly, Danny},
-  title        = {NFL Draft Guide},
-  howpublished = {https://nfldraft.theringer.com/mock-draft},
-  year         = {2021}
-}
-
-@misc{qbSuccess,
-  author       = {Miklius, Michael},
-  title        = {NFL Draft Prep: How Successful are First Round Picks?},
-  howpublished = {https://football.pitcherlist.com/pessimists-guide-to-the-nfl-draft/},
-  year         = {2019}
-}
 
 @techreport{imp_bias,
   author      = {Staats, Cheryl and Capasto, Kelly and Tenney, Lena and Mamo, Sarah},
@@ -55,16 +26,11 @@
   institution = {The Ohio State University},
   year        = {2017}
 }
-@misc{WrightRobin,
-  author       = {Wright, Robin A.},
-  title        = {Race Matters... And SO Does Gender},
-  howpublished = {http://kirwaninstitute.osu.edu/implicit-bias-training/resources/race-matters.pdf},
-  year         = {2016}
-}
 
-@misc{Greenberg2002Minorities,
-  author = {B. Greenberg and Dana E. Mastro and Jeffrey E. Brand},
+@inproceedings{Greenberg2002Minorities,
+  booktitle = {Minorities and the mass media: Television into the 21st century},
   title = {Minorities and the mass media: Television into the 21st century},
+  author = {B. Greenberg and Dana E. Mastro and Jeffrey E. Brand},
   year = {2002}
 }
 
@@ -86,11 +52,11 @@ eprint = {
 }
 }
 
-@techreport{Castaneda,
-  author      = {Castañeda, Mari},
-  title       = {The Power of (Mis)Representation: Why Racial and Ethnic Stereotypes in the Media Matter},
-  institution = {University of Massachusetts Amherst},
-  year        = {2018}
+@inproceedings{Castaneda,
+  booktitle = {The Power of (Mis)Representation: Why Racial and Ethnic Stereotypes in the Media Matter},
+  title={The Power of (Mis)Representation: Why Racial and Ethnic Stereotypes in the Media Matter},
+  author={M. Casta{\~n}eda},
+  year={2018}
 }
 
 @article{CommentatorBias,
